Auth endpoint test2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Swagger UI</title>
     <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
+    <script type="text/javascript" src="swagger.js"></script>
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
     <style>
@@ -40,7 +41,7 @@
 
       // Build a system
       const ui = SwaggerUIBundle({
-        url: "https://github.com/Joralmi/swagger_landing_test/blob/master/swagger.json",
+        spec: data,
         dom_id: '#swagger-ui',
         deepLinking: true,
         presets: [
